# cmake_nixos_cross

./: CMakeLists.txt  README.md  default.nix  ffmpeg.nix  overlay.nix  package.nix  windows.nix
cmake/Modules/: FindFFmpeg.cmake
hello_lib/: CMakeLists.txt  simple_lib.cpp
hello_lib/include/: simple_lib.hpp
output_lib/: CMakeLists.txt  output.cpp
output_lib/include/: output.hpp
src/: CMakeLists.txt  simple_example.cpp
